# KleinEngine

./: .gitignore  CMakeLists.txt  README.md  TODOs.txt
app/: app.hpp  main.cpp
app/ui_panels/: inspector.hpp
engine/: all.hpp
engine/core/: enviroment.cpp  enviroment.hpp  input_manager.cpp  input_manager.hpp  keymap.hpp  logger.hpp  platform.cpp  platform.hpp  timer.cpp  timer.hpp  ui_manager.cpp  ui_manager.hpp  window.cpp  window.hpp
engine/math/: lorentz.hpp  projections.hpp
engine/renderer/: buffer.cpp  buffer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  post_processing_kernels.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  tessellate.hpp  texture.cpp  texture.hpp
engine/resources/: entity_loader.cpp  entity_loader.hpp  material_loader.cpp  material_loader.hpp  model_loader.cpp  model_loader.hpp  resource_cache.hpp  resource_database.cpp  resource_database.hpp  shader_loader.cpp  shader_loader.hpp  texture_loader.cpp  texture_loader.hpp
engine/scene/: aabb.hpp  camera.cpp  camera.hpp  components.hpp  entity.hpp  octree.cpp  octree.hpp  registry.hpp  scene.cpp  scene.hpp  spatial_index.hpp  uniform_grid.cpp  uniform_grid.hpp
include/core/: app.hpp  shaders.hpp
resources/: resources.json
resources/shaders/fragment/: frag1.glsl  lightfrag1.glsl
resources/shaders/imports/: klein.glsl
resources/shaders/vertex/: lightvert1.glsl  vert1.glsl
src/: main.cpp
src/core/: shaders.cpp  window.cpp
